# LinuxMonitor

./: CMakeLists.txt  README.md
display/: CMakeLists.txt  abstract_monitor_model.cc  abstract_monitor_model.h  cpu_load_model.cc  cpu_load_model.h  cpu_softirq_model.cc  cpu_softirq_model.h  cpu_stat_model.cc  cpu_stat_model.h  main.cc  monitor_widget.cc  monitor_widget.h
docker/scripts/: monitor_docker_into.sh  monitor_docker_run.sh
monitor/include/: abstract_monitor.h  cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  read_file.h
monitor/src/: CMakeLists.txt  cpu_load_monitor.cc  cpu_softirq_monitor.cc  cpu_stat_monitor.cc  main.cc  read_file.cc
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  monitor_info.proto
rpc_manager/: CMakeLists.txt
rpc_manager/server/: CMakeLists.txt  main.cc  rpc_manager.cc  rpc_manager.h
rpc_manager/stub/: CMakeLists.txt  rpc_stub.cc  rpc_stub.h
